--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -192,6 +192,7 @@ flutter:
     - assets/common/
     - assets/svga/
     - assets/live/
+    - assets/gif/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
